fix settings and footer alignment

--- a/src/PROCERGS/LoginCidadao/CoreBundle/Resources/public/css/general.css
+++ b/src/PROCERGS/LoginCidadao/CoreBundle/Resources/public/css/general.css
@@ -106,6 +106,7 @@ footer {
 
 footer .row {
     background-color: #3b3a33;
+    margin: 0;
 }
 
 footer h3 {
